@@ -1,3 +1,14 @@
+2007-01-27  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/color.h src/graphics.c (plot_image_or_update_axes)
+	term/pdf.trm (PDF_filled_polygon) src/color.c (filled_quadrangle
+	filled_polygon_3dcoods filled_polygon_3dcoords_zfixed):
+	Change gpiPoints to contain signed x,y values. This is what the
+	explanatory comment always implied ("same as in gd.h"), but it 
+	wasn't true.  The change fixes several image and polygon clipping
+	problems, including segfaults in the pdf driver.
+	Bug #1612502
+
 2007-01-27  James R. Van Zandt  <jrv@vanzandt.comcast.net>
 
 	* docs/gnuplot.doc: Rearranged the introduction, so it discusses
